[package]
name = "toamend"
version = "0.1.0"
authors = ["Björn Molin <bjorn.molin@motrice.se>"]

[dependencies]
env_logger = "0.6.0"
log = "0.4"
pretty_env_logger = "0.2"
uuid = { version = "0.7.1", features = ["serde", "v4"] }    
ws = "0.7.9"

hyper = "0.12"
futures = "0.1" 
rust-crypto = "0.2.36"
clap = "2.32.0"
rdkafka = "0.17.0"
byteorder = "1.2.7"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
redis = "0.9.1"
r2d2 = "0.8.3"
r2d2_redis = "0.8.0"
lmdb-rs = "0.7.6"