[package]
name = "toamend"
version = "0.1.0"
authors = ["Björn Molin <bjorn.molin@motrice.se>"]

[dependencies]
env_logger = "0.7.0"
log = "0.4"
pretty_env_logger = "0.3"
uuid = { version = "0.7.4", features = ["serde", "v4"] }    
ws = "0.7.9"

hyper = "0.14"
futures = "0.1" 
rust-crypto = "0.2.36"
clap = "2.33.0"
rdkafka = "0.21.0"
byteorder = "1.3.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
redis = "0.12.0"
r2d2 = "0.8.5"
r2d2_redis = "0.11.0"
lmdb-rs = "0.7.6"